--- a/index.html
+++ b/index.html
@@ -25,33 +25,33 @@ margin-bottom: 18px;
   <div class="card-container" id="cardContainer">
     <div class="card"><img src="immagini/apple.png" alt="Immagine 1">
       <div class="action-bar">
-        <button class="action-button" id="rejectBtn">❌</button>
-        <button class="action-button" id="acceptBtn">🩵</button>
+        <button class="action-button" class="rejectBtn">❌</button>
+        <button class="action-button" class="acceptBtn">🩵</button>
       </div>
     </div>
     <div class="card"><img src="immagini/google.png" alt="Immagine 2">
       <div class="action-bar">
-        <button class="action-button" id="rejectBtn">❌</button>
-        <button class="action-button" id="acceptBtn">🩵</button>
+        <button class="action-button" class="rejectBtn">❌</button>
+        <button class="action-button" class="acceptBtn">🩵</button>
       </div>
     </div>
     <div class="card"><img src="immagini/image3.jpg" alt="Immagine 3">
       <div class="action-bar">
-        <button class="action-button" id="rejectBtn">❌</button>
-        <button class="action-button" id="acceptBtn">🩵</button>
+        <button class="action-button" class="rejectBtn">❌</button>
+        <button class="action-button" class="acceptBtn">🩵</button>
       </div>
     </div>
     <div class="card"><img src="immagini/image4.jpg" alt="Immagine 4">
       <div class="action-bar">
-        <button class="action-button" id="rejectBtn">❌</button>
-        <button class="action-button" id="acceptBtn">🩵</button>
+        <button class="action-button" class="rejectBtn">❌</button>
+        <button class="action-button" class="acceptBtn">🩵</button>
       </div>
     </div>
   </div>
 
 
   <div class="profile-toggle" onclick="toggleProfileContainer()">
-    <img src="/uploads/<?= htmlspecialchars($immagine_profilo) ?>" alt="Foto Profilo" class="profile-icon">
+    <img src="immagini/new-york-city.jpg" alt="Foto Profilo" class="profile-icon">
 
   </div>
 
@@ -59,7 +59,7 @@ margin-bottom: 18px;
   <div class="profile-container">
     <div class="profile-header">
       <div class="profile-picture-container">
-        <img src="/uploads/<?= htmlspecialchars($immagine_profilo) ?>" alt="Foto Profilo" class="profile-pic">
+        <img src="immagini/new-york-city.jpg" alt="Foto Profilo" class="profile-pic">
 
       </div>
       <div class="profile-info">
