--- a/index.html
+++ b/index.html
@@ -74,6 +74,8 @@ margin-bottom: 18px;
         
         <button class="companions-toggle">Mostra Compagni di viaggio</button>
         <button class="viaggi-toggle" onclick="caricaViaggi()">Mostra viaggi</button>
+        
+        <button class="companions-toggle" onclick="creaViaggi()">crea viaggio</button>
       </div>
 
         </div>
