--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@ margin-bottom: 18px;
 
           <button class="modifica-toggle" onclick="caricaModificaProfilo()">Modifica profilo</button>
         
-        <button class="companions-toggle">Mostra Compagni di viaggio</button>
+        <button class="companions-toggle" onclick="match()">Mostra Compagni di viaggio</button>
         <button class="viaggi-toggle" onclick="caricaViaggi()">Mostra viaggi</button>
         
         <button class="companions-toggle" onclick="creaViaggi()">crea viaggio</button>
