--- a/register.html
+++ b/register.html
@@ -15,7 +15,7 @@
       <input type="text" name="username" placeholder="Nickname" required />
       <input type="email" name="email" placeholder="Email" required />
       <input type="password" name="password" placeholder="Password" required />
-      <input type="data_nascita" name="data_nascita" placeholder="Data di nascita" required />
+      <input type="date" name="data_nascita" placeholder="Data di nascita" required />
       <button type="submit">Registrati</button>
     </div>
     <p class="link-registrazione">
