--- a/creaprofilo.html
+++ b/creaprofilo.html
@@ -185,7 +185,7 @@
 
         </section>
 
-        <form id="createForm" action="/api/saprofile.php" method="POST" enctype="multipart/form-data">
+        <form id="createForm" action="/api/save_profile.php" method="POST" enctype="multipart/form-data">
           <div class="flex justify-center mt-10">
             <button type="submit" class="bg-navy text-cream px-8 py-3 rounded-lg font-semibold hover:bg-navy-light">
               Termina
