--- a/creaprofilo.html
+++ b/creaprofilo.html
@@ -125,17 +125,17 @@
 
           <div>
             <label for="name" class="block text-sm font-semibold mb-2 tracking-wide">Nome</label>
-            <input id="name" type="text" placeholder="nome" class="w-full bg-cream border border-navy/30 focus:border-navy-light focus:ring-1 focus:ring-navy-light rounded-lg p-3 placeholder-navy/50 transition" />
+            <input id="name" name="name" type="text" placeholder="nome" class="w-full bg-cream border border-navy/30 focus:border-navy-light focus:ring-1 focus:ring-navy-light rounded-lg p-3 placeholder-navy/50 transition" />
           </div>
 
           <div>
             <label for="bio" class="block text-sm font-semibold mb-2 tracking-wide">Bio:</label>
-            <input id="bio" type="text" placeholder="bio" class="w-full bg-cream border border-navy/30 focus:border-navy-light focus:ring-1 focus:ring-navy-light rounded-lg p-3 placeholder-navy/50 transition" />
+            <input id="bio" name="bio" type="text" placeholder="bio" class="w-full bg-cream border border-navy/30 focus:border-navy-light focus:ring-1 focus:ring-navy-light rounded-lg p-3 placeholder-navy/50 transition" />
           </div>
 
           <div>
             <label for="email" class="block text-sm font-semibold mb-2 tracking-wide">Email</label>
-            <input id="email" type="email" placeholder="email" class="w-full bg-cream border border-navy/30 focus:border-navy-light focus:ring-1 focus:ring-navy-light rounded-lg p-3 placeholder-navy/50 transition" />
+            <input id="email" name="bio" type="email" placeholder="email" class="w-full bg-cream border border-navy/30 focus:border-navy-light focus:ring-1 focus:ring-navy-light rounded-lg p-3 placeholder-navy/50 transition" />
           </div>
 
           <div>
