--- a/creaprofilo.html
+++ b/creaprofilo.html
@@ -25,7 +25,38 @@
 
   <title>Wanderlust – Crea account</title>
   <style>
-    /* stili omessi per brevità, li riporti tutti qui dentro se serve */
+    .profile-header {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 20px;
+  gap: 15px;
+}
+
+.profile-picture-container {
+  width: 300px;
+  height: 400px;
+  border-radius: 10px;
+  overflow: hidden;
+  box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
+  background-color: #f0f0f0;
+  position: relative;
+  cursor: grab;
+}
+
+.profile-picture-container img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  object-position: center center;
+  user-select: none;
+  pointer-events: none;
+}
+
+input[type="file"] {
+  margin-top: 20px;
+}
+
   </style>
 </head>
 <body class="bg-cream text-navy min-h-screen">
@@ -43,11 +74,12 @@
 
       <h1 class="text-3xl md:text-4xl font-extrabold mb-8 text-center">Crea account</h1>
 
-      <!-- IMMAGINE PROFILO -->
-      <div class="profile-header mb-8">
+      <!-- IMMAGINE PROFILO 1 modifica-->
+      <div class="profile-header">
         <div class="profile-picture-container" id="imageContainer">
           <img id="profileImage" src="" alt="Immagine Profilo" />
         </div>
+
         <input type="file"
                id="fileInputProfile"
                name="immagine_profilo"
@@ -110,11 +142,11 @@
       <div class="mb-8">
         <label class="block text-lg font-bold mb-4">Qual è la tua vacanza da sogno?</label>
         <div class="flex flex-col gap-4">
-          <button type="button" data-value="spiaggia" class="dream-btn flex items-center gap-3 w-full rounded-xl p-3">🏖️ Rilassarsi in spiaggia</button>
+          <button type="button" data-value="spiaggia" class="dream-btn flex items-center gap-3 w-full rounded-xl p-3"  ;">🏖️ Rilassarsi in spiaggia</button>
           <button type="button" data-value="musei"   class="dream-btn flex items-center gap-3 w-full rounded-xl p-3">🏛️ Imparare nei musei</button>
           <button type="button" data-value="ristoranti" class="dream-btn flex items-center gap-3 w-full rounded-xl p-3">🍴 Mangiare nei migliori ristoranti</button>
           <button type="button" data-value="natura"  class="dream-btn flex items-center gap-3 w-full rounded-xl p-3">⛰️ Esplorare la natura</button>
-          <button type="button" data-value="bambini" class="dream-btn flex items-center gap-3 w-full rounded-xl p-3">👨‍👩‍👧‍👦 Intrattenere i bambini</button>
+
         </div>
       </div>
 
