--- a/pagina_iniziale.html
+++ b/pagina_iniziale.html
@@ -18,6 +18,8 @@
         }
     </style>
 </head>
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+
 <body>
     <div class="fade-section" id="fadeSection">
         <h1>Wanderlust</h1>
