--- a/comingsoon.html
+++ b/comingsoon.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  
 
   <!-- Tailwind + custom palette -->
   <script src="https://cdn.tailwindcss.com"></script>
@@ -24,10 +25,12 @@
 
   <title>Coming Soon – Wanderlust</title>
 </head>
+
 <body class="min-h-screen bg-cream text-navy flex items-center justify-center font-sans">
   <div class="max-w-md text-center bg-white/60 backdrop-blur-lg rounded-2xl shadow-lg p-8 space-y-6">
-    <h1 class="text-4xl font-extrabold">App in arrivo!</h1>
-    <p class="text-lg">Restate sintonizzati: stiamo preparando qualcosa di straordinario per voi!</p>
+    <div class="w-11/12 max-w-md text-center bg-white/60 …"></div>
+    <h1 class="text-3xl sm:text-4xl font-extrabold">App in arrivo!</h1>
+    <p class="text-base sm:text-lg">Restate sintonizzati: stiamo preparando qualcosa di straordinario per voi!</p>
 
     <!-- Contact form per iscriversi alla beta -->
     <form action="/api/beta_signup.php" method="POST" class="space-y-4">
