login video sfondo

--- a/login.html
+++ b/login.html
@@ -10,6 +10,10 @@
 </head>
 
 <body>
+    <video autoplay muted loop id="video-sfondo">
+    <source src="/immagini/coppia-che-si-siede-sulla-sedia-da-campeggio-fuori-dal-camper-alla-spiaggia.mp4" type="video/mp4">
+    Il tuo browser non supporta i video HTML5.
+  </video>
   <div class="login-container">
     <h2 class="logo">Wanderlust</h2>
 
